Inclui mais um botão chamado Maybe...

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Join Us!</h1>
 <p>Are you ready to start?</p>
-<button>Yes!</button> <button>Not, yet.</button>
+<button>Yes!</button> <button>Maybe...</button> <button>Not, yet.</button>
 </body>
 </html>
